2009-01-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-priorities): Protect against nil value
	of current-language-environment.

2009-01-13  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnfolder.el (nnfolder-read-folder): Check if most-positive-fixnum is
	available at runtime.

2009-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-date-ut): Fix end point of narrowing.

2009-01-11  Aidan Kehoe  <kehoea@parhasard.net>

	* nnfolder.el (nnfolder-read-folder): The (lsh -1 -1) trick to generate
	the greatest positive fixnum value doesn't work under an XEmacs with
	bignum support; use the most-positive-fixnum constant instead,
	available since Emacs 21.1 with cl and XEmacs 21.1.

2009-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-coding-system-priorities): Allow the value like
	"Japanese (UTF-8)" of current-language-environment.

2009-01-08  Reiner Steib  <Reiner.Steib@gmx.de>

	* imap.el (imap-enable-exchange-bug-workaround): Explain auto-detection
	in the doc string.

	* message.el (message-fix-before-sending): Amend comment.

2009-01-08  Dave Love  <fx@gnu.org>

	* imap.el (imap-message-appenduid-1): Fix typo in imap-fetch-safe call.

2009-01-07  David Engster  <dengste@eml.cc>

	* gnus-msg.el (gnus-inews-do-gcc): Fix last patch to deal with
	simplified server definitions by converting it via
	gnus-server-to-method.

2009-01-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-set-local-parameters): Always evaluate
	parameter's operands.

2009-01-06  David Engster  <dengste@eml.cc>

	* gnus-msg.el (gnus-inews-do-gcc): Reduce to short group name when on
	primary select method (for gnus-group-mark-article-as-read).

2009-01-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-ucs-to-char): New function.

	* mm-url.el (mm-url-decode-entities): Use it.

	* lpath.el: Fbind decode-char, int-to-char, ucs-to-char and
	unicode-to-char.

2009-01-05  Dave Love  <fx@gnu.org>
